Technical/CloudComputing/Compute/virtualization/nova/文档/easystack产品/ComputingService/6.0.2/zh-cn/UserGuide/Instance.md
---
title: 云主机
---
本章节主要介绍在云主机页面中，针对云主机的一系列运维管理操作，如：查看详情、启动/关机/重启、暂停/恢复、挂起/取消挂起、编辑名称、调整规格、调整启动顺序等。其中，在云平台的顶部导航栏中，依次选择\[产品与服务]-\[计算]-\[云主机]，即可进入“云主机”页面。

# 查看详情

在“云主机”页面中，单击云主机名称 ，可进入其详情页面。在详情页面中，可查看该云主机的基本信息、VNC控制台、详细配置、最近操作和存储、网络信息。

> 说明：
> 
> Arm环境暂不支持图形化界面通过iso格式安装CentOS 7.6，安装过程会失败。您可以通过命令行方式进行安装。

# 查看监控

在“云主机”页面中，单击待查看云主机所在行的监控图标，可进入其监控页面。在监控页面中，可查看该云主机不同时间长度和时间精度的监控数据。

> 说明：
> 
> 当云主机的操作系统镜像不支持 **virtio_ballon** 驱动时（一般 **Windows** 操作系统不支持该驱动，需要另行安装），无法获取到云主机内存的使用情况，云主机监控图表中也将不显示内存使用情况。

# 启动/关机

1. 在“云主机”页面中，勾选待操作云主机后，单击 `启动` 或 `关机` ，弹出“启动/关闭云主机”提示框。

2. 单击 `启动` 或 `关闭` ，完成操作。

# 重启

云主机支持软重启和硬重启两种重启方式。硬重启操作类似于强制关闭服务器电源再开启服务器。本操作用于介绍云主机软重启的具体操作步骤。

> 警告：
> 
> 当云主机内存中的数据尚未写入云硬盘中时，硬重启可能会导致数据丢失或者文件系统损坏。因此，硬重启仅适用于软重启无法生效的场景，且建议在执行硬重启操作前先对云主机数据进行备份。

1. 在“云主机”页面中，勾选待操作云主机后，单击 `重启` ，弹出“重启云主机”提示框。

2. 单击 `重启` ，完成操作。

# 暂停/恢复

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `暂停` 或 `恢复` ，弹出“确认暂停/恢复暂停的云主机”提示框。

2. 单击 `暂停云主机` 或 `恢复暂停的云主机` ，完成操作。

   > 说明：
   > 
   > 处于暂停状态的云主机，内存中的内容仍然保留，CPU仍然运转。

# 挂起/取消挂起

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `挂起` 或 `取消挂起` ，弹出“挂起/取消挂起云主机”提示框。

2. 单击 `挂起` 或 `取消挂起` ，完成操作。

   > 说明：
   > 
   > 当云主机挂起后，内存中的内容将保存到云硬盘，所有运行的程序保持不变。但是，与物理服务器类似，处于挂起状态云主机的CPU不再运转。当取消挂起后，云主机将回到挂起前状态。

# 编辑名称

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `编辑名称` ，弹出“编辑云主机”对话框。

2. 配置参数后，单击 `保存` ，完成操作。

# 调整规格

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `调整规格` ，弹出“调整云主机规格”对话框。

2. 配置参数后，单击 `调整规格` ，完成操作。

   > 警告：
   > 
   > * 在调整云主机规格的过程中，将会使其短暂关机。请确保可用区内有可用节点。
   >  * 针对GPU计算加速型的云主机，在调整规格时只能选择GPU计算加速型的云主机规格。

# 调整启动顺序

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `调整启动顺序` ，弹出“调整启动顺序”对话框。

2. 配置参数后，单击 `确认` ，完成操作。

# 克隆

本操作用于创建与被克隆云主机具有相同属性（配置、系统盘、安全组、用户数据、元数据）的云主机。新云主机处于运行中状态，被克隆云主机挂载的云硬盘会克隆出新的云硬盘，并挂载到新云主机。

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `克隆` ，弹出“克隆云主机”对话框。

2. 配置参数后，单击 `确认` ，完成操作。

| **参数** | **说明** |
| --- | --- |
| 源云主机名称（不可编辑） | 在本次克隆中，源云主机的名称。 |
| 源云主机规格（不可编辑） | 在本次克隆中，源云主机规格的名称。 |
| 克隆数量 | 在本次克隆中，新云主机的数量。 |
| 可用区 | 在本次克隆中，新云主机所在的可用区。 |
| 指定计算节点 | 在本次克隆中，是否指定新云主机的计算节点。<br/>当选择是时，请在下拉列表中选择计算节点。其中，列表所列均为满足云主机vCPU和内存要求的计算节点。<br/>当选择否时，云平台将自动为新云主机分配计算节点。 |
| 网络 | 在本次克隆中，用于创建新云主机虚拟网卡的子网。 |
| SSH密钥（可选） | 在本次克隆中，新云主机远程登录的SSH密钥凭证。 |
| SSH密码（可选） | 在本次克隆过程中，新云主机远程登录的SSH密码凭证。 |
| 确认密码（可选） | 请重复输入上述SSH密码，确保输入无误。 |

   > 警告：
   > 
   > * 当源云主机的启动源是镜像时，云平台将自动为其创建一个快照。
   > * 当源云主机的启动源是云硬盘时，不会对其创建快照。
   > * 处于运行中或关机状态的源云主机，均可以执行克隆操作。但是，当克隆运行中状态的云主机时，由于云平台只对系统盘和数据盘进行数据级的克隆，内存中的数据不会被克隆，所以可能会造成内存与磁盘数据的不一致。
   > * 云主机克隆功能的推荐使用场景是系统盘与数据盘均在云平台自身的存储系统中。当系统盘与数据盘在第三方商业存储中时，要求第三方存储支持基于块设备的克隆功能。
  
# 创建快照

本操作用于将云主机当前状态的磁盘数据保存，创建镜像文件，以备将来启动新的云主机使用。 当云主机挂载一个云硬盘时，也仅对当前云主机进行创建快照操作。 但如果云主机是从云硬盘启动创建的话，在为云主机创建快照的时候，也会同时为其挂载的云硬盘创建快照。对于处于运行中状态的云主机，默认采用在线快照的方式创建快照，中间过程并不会挂起云主机。

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `创建快照` ，弹出“创建快照”对话框。

2. 配置参数后，单击 `创建` ，完成操作。

# 编辑标签

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `编辑标签` ，弹出“编辑资源标签”对话框。

2. 配置参数后，单击 `确定` ，完成操作。

# 绑定公网IP/解绑公网IP

本操作用于为云主机绑定公网IP，以便对外提供服务，或访问云平台外部网络。

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `绑定公网IP` 或 `解绑公网IP` ，弹出“云主机绑定/解绑公网IP”对话框。

2. 配置参数后，单击 `绑定` 或 `解除绑定` ，完成操作。

   > 说明：
   > 
   > * 当“云主机网卡“的下拉框中未显示已添加的网卡时，请检查该网卡所在子网是否连接到路由器，或该网卡所在子网连接的路由器是否设置网关。
   > * 当网卡所在子网为共享类型时，请提前确认该子网已连接到路由器且该路由器已设置网关，否则将无法成功绑定公网IP地址。

# 连接网络/断开网络

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `连接网络` 或 `断开网络` ，弹出“连接/断开云主机网络”对话框。

2. 配置参数后，单击 `绑定` 或 `解除绑定` ，完成操作。

   > 说明：
   > 
   > 请确保云主机所在计算节点有足够可用的SR-IOV虚拟网卡。值得注意的是，较低版本的操作系统（如RHEL5.5）可能不支持PIC设备热插拔，如果绑定SR-IOV虚拟网卡未生效，请尝试重启云主机。

# 编辑安全组

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `编辑安全组` ，弹出“编辑安全组”对话框。

2. 配置参数后，单击 `保存` ，完成操作。

# 管理虚拟IP

本操作用于为云主机上绑定的虚拟网卡配置虚拟IP（VIP）。通常同一个虚拟IP可以与多个云主机的虚拟网卡绑定，作为用户自定义高可用服务的可漂移网络入口，保障业务应用的高可用性。

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `管理虚拟IP` ，弹出“管理虚拟IP”对话框。

2. 查看已添加的虚拟IP，或单击 `添加虚拟IP` ，添加新的虚拟IP地址。

# 挂载云硬盘/卸载云硬盘

云硬盘能够为云主机提供持久化的块级存储，相当于给云主机增加一个硬盘， 用于保存数据。云硬盘独立于云主机的生命周期。当云主机被删除时，云硬盘只被解绑，但不被删除。当云硬盘重新被挂载后，对云硬盘进行分区/格式化后即可使用。

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `挂载云硬盘` 或 `卸载云硬盘` ，弹出“挂载/卸载云硬盘”对话框。

2. 配置参数后，单击 `挂载` 或 `卸载` ，完成操作。

   > 说明：
   > 
   > * 通过将卸载的云硬盘挂载到别的云主机上，能够达到快速转移数据的目的。
   > * 建议在卸载云硬盘时不再进行大量的读写操作，以确保数据完整性。

# 挂载ISO/卸载ISO

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `挂载ISO` 或 `卸载ISO` ，弹出“挂载/卸载ISO”对话框。

2. 配置参数后，单击 `挂载` 或 `卸载` ，完成操作。

   > 说明：
   > 
   > 通过挂载ISO可以救援已损坏的云主机。即，首先为云主机挂载一个新的ISO镜像文件，然后更改云主机启动顺序，调整CD-ROM至第一启动顺序。

# 挂载USB设备/卸载USB设备

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `挂载USB设备` 或 `卸载USB设备` ，弹出“挂载/卸载USB设备”对话框。

2. 配置参数后，单击 `挂载` 或 `卸载` ，完成操作。

   > 警告：
   > 
   > 仅支持USB 2.0/3.0存储设备。

# 冷迁移

本操作用于迁移云主机至云平台中的其它节点。当云主机处于正常运行状态时，系统会先关闭云主机。在云主机处于关闭状态后，进行迁移操作，云主机将被迁移到除本节点外的另外一台物理机上。

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `冷迁移` ，弹出“云主机冷迁移”对话框。

2. 配置参数后，单击 `冷迁移` ，完成操作。

   > 警告：
   > 
   > 冷迁移可以选择指定目标主机，也可以选择自动调度到可用主机。但是，两种调度策略均只能在同一个可用区（AZ）中生效。若修改云主机所属节点的可用区，云主机只能调度迁移到原节点所在可用区，否则会导致调度迁移失败。

# 热迁移

本操作用于在云主机不停机的情况下将云主机由当前节点迁移到另外一个节点，挂载的云硬盘及数据都将保持不变，但只有运行状态和暂停状态的云主机可以进行批量迁移操作。可以选择需要迁移的目标节点，目标节点的可用资源需大于批量迁移的云主机的资源总量，否则会导致迁移失败。还可以指定带宽合适的网络迁移云主机，包含管理网络、业务心跳网络和存储集群业务网络。

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `热迁移` ，弹出“云主机热迁移”对话框。

2. 配置参数后，单击 `热迁移` ，完成操作。

   > 说明：
   > 
   > * 当您选择的云主机执行热迁移操作时，由于超时导致迁移失败，您可以重置您的云主机状态为“运行中”后，再次执行云主机热迁移操作。
   > * 对于GPU计算加速型的云主机，不支持热迁移操作。因此当您选中一个GPU计算加速型的云主机时，热迁移操作按钮会被禁用。
   > * Arm架构的环境只支持在同一种品牌同一种型号CPU上进行热迁移。
   > * 在迁移过程中，你可以看到迁移进度，点击进度可以查看迁移进度气泡框，可以取消热迁移，强制热迁移需要进度达到80%或超时才可使用。若执行强制热迁移将会使云主机业务发生短暂中断。

# 撤离

当云主机所在的节点处于离线或是错误状态时，为了保证业务稳定运行以及数据安全，建议此时将在该台节点上的云主机迁移至集群中其他可用的节点上，不论云主机的状态是运行、错误或是关机。

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `撤离` ，弹出“撤离云主机”对话框。

2. 配置参数后，单击 `撤离` ，完成操作。

   > 说明：
   > 
   > * 指定的目标节点若节点资源不足时，将无法完成云主机撤离操作，请务必保证指定目标节点资源可用。
   > * 请确认该云主机已经被正确关机或该节点处于关机状态后，再执行撤离操作。
   > * 存量项目中，有 **从镜像启动** 的云主机，不支持进行云主机撤离操作。

# 重置状态

当云主机由于异常原因长时间处于某个中间状态时，可以通过重置状态功能将云主机状态强制设置为运行中，之后可以登录云主机查看云主机状态，或者执行删除操作。

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `重置状态` ，弹出“重置云主机状态”提示框。

2. 单击 `重置` ，完成操作。

   > 说明：
   > 
   > * 重置云主机状态不会影响云主机操作系统的运行状态，请谨慎操作。
   > * 当云主机处于错误状态，但没有所属宿主机时，将无法重置云主机状态，但可以直接对云主机执行删除操作。

# 锁定/解锁

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `锁定` 或 `解锁` ，弹出“锁定/解锁云主机”提示框。

2. 单击 `锁定` 或 `解锁` ，完成操作。

# 重建

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `重建` ，弹出“重建云主机”对话框。

2. 配置参数后，单击 `重建` ，完成操作。

   > 说明：
   > 
   > 针对GPU计算加速型的云主机，在重建后获得的新云主机无法使用源云主机的GPU资源。

# 删除

1. 在“云主机”页面中，勾选待操作云主机后，单击 `更多` - `删除` ，弹出“删除云主机”对话框。

2. 配置参数后，单击 `删除` ，完成操作。

| **参数** | **说明** |
| --- | --- |
| 删除策略 | 云主机支持“移入回收站”和“彻底删除”两种删除策略。具体说明如下：<br/>* 移入回收站：移入回收站后将默认保留24小时，超时将自动彻底删除。在此期间，可以随时恢复或彻底删除该云主机。此外，当云主机移入回收站后，该云主机绑定的公网IP地址将自动解绑，随云主机创建的虚拟网卡将自动删除，挂载的数据盘将自动卸载。<br/>  对于云主机的系统盘，仅当其已设置随云主机删除且无快照时，若云主机移入回收站后再彻底删除，将会同时删除该系统盘。如需保留系统盘数据，请为其创建快照或备份。<br/>  对于云主机的数据盘，无论是否已设置随云主机删除，若云主机移入回收站后再彻底删除，均不会同时删除绑定的数据盘。<br/>* 彻底删除：彻底删除后将无法恢复，其绑定的公网IP地址将自动解绑，随云主机创建的虚拟网卡将自动删除。<br/>  对于云主机的系统盘/数据盘，仅当其已设置随云主机删除且无快照时，若云主机彻底删除，将会同时删除这些云硬盘。如需保留云硬盘数据，请为其创建快照或备份。 |

